--- a/frontend/src/components/home/home.m.css
+++ b/frontend/src/components/home/home.m.css
@@ -1,4 +1,8 @@
 .title {
+    font-size: 40px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 900;
+    margin-top: 200px;
     text-align: center;
 }
 
