--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Courier New', 'Courier', 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-  font-size: larger;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
