--- a/frontend/src/components/newquestion/newquestion.m.css
+++ b/frontend/src/components/newquestion/newquestion.m.css
@@ -17,28 +17,30 @@
     max-width: 800px;
 }
 
-.submitAnswerButton {
+.submitQuestionButton {
     margin-top: 20px;
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 8px 10px;
-    background-color: black;
-    color: white;
-    font-weight: 600;
+    padding: 10px;
     width: 100%;
-    box-sizing: border-box;
-    letter-spacing: 1px;
-    cursor: pointer;
-    transition: all .1s ease-in-out;
 }
 
 .titleContainer {
-    height: 80px;
+    height: 40px;
+    background: white;
+    border: 2px gray solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.titleContainer:focus {
+    outline: none;
 }
 
 .bodyContainer {
     height: 300px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .noResize { 
