--- a/frontend/src/components/home/home.m.css
+++ b/frontend/src/components/home/home.m.css
@@ -1,6 +1,6 @@
 .title {
     font-size: 40px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 900;
     margin-top: 200px;
     text-align: center;
