--- a/frontend/src/components/login/login.m.css
+++ b/frontend/src/components/login/login.m.css
@@ -1,28 +1,36 @@
+.loginPage {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    background: white;
+}
+
+.imageTitle {
+    color: white;
+    margin: 250px auto 40px;
+}
+
+.infoPane {
+    display: flex;
+    flex: 1 1 0%;
+    flex-direction: column;
+    background: linear-gradient(0deg, rgb(0, 81, 195) 0%, rgb(1, 15, 88) 100%);
+}
+
+.loginImage {
+    margin: 0 auto;
+    width: 450px;
+}
+
 .center {
     text-align: center;
 }
 
-.loginContainer {
-    margin: 50px 30px;
-    width: 350px;
-    height: 280px;
-}
-
-.loadingContainer {
-    margin: 50px 30px;
-    width: 350px;
-    height: 280px;
-    align-items: center;
+.loginPane {
     display: flex;
-    justify-content: center;
-}
-
-.spinner {
-    color: black !important;
-}
-
-.header {
-    margin-top: 10px;
+    flex: 1 1 0%;
+    flex-direction: column;
+    margin: 300px auto;
 }
 
 .loginLabel {
@@ -30,8 +38,8 @@
 }
 
 .loginGroup {
-    width: 320px;
-    margin: 40px auto;
+    width: 400;
+    margin: 10px auto;
 }
 
 .marginTop {
@@ -65,53 +73,6 @@
 
 .submit {
     margin-top: 20px;
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 8px 10px;
-    background-color: black;
-    color: white;
-    font-weight: 600;
     width: 100%;
-    box-sizing: border-box;
-    letter-spacing: 1px;
-    cursor: pointer;
-    transition: all .1s ease-in-out;
-}
-
-.submit:hover {
-    transform: scale(1.03);
-}
-
-.loginButton {
-    color: #404040;
-    width: 100%;
-    box-sizing: border-box;
-    position: relative;
-    padding: 10px 16px;
-    border-radius: 5px;
-    border-width: 2px;
-    border-color: #303030;
-    font-weight: 550;
-    letter-spacing: 1px;
-    cursor: pointer;
-    box-shadow: none;
-    background-color: whitesmoke;
-    transition: all .1s ease-in-out;
-}
-
-.loginButton:hover {
-    transform: scale(1.03);
-}
-
-.buttonContentWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.iconWrapper {
-    width: 18px;
-    height: 18px;
-    display: inline-block;
-    margin-right: 12px;
+    height: 40px;
 }
