--- a/frontend/src/components/header/header.m.css
+++ b/frontend/src/components/header/header.m.css
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 20px 72px;
-    margin-bottom: 50px;
     font-size: 18px;
     align-items: center;
+    background: linear-gradient(90deg, rgba(226, 238, 255, 1) 0%, rgba(147, 194, 255, 1) 100%);
+    box-shadow: 0 -2px 4px black;
 }
 
 @media (max-width: 600px) {
