--- a/frontend/src/pages/question/question.m.css
+++ b/frontend/src/pages/question/question.m.css
@@ -1,6 +1,6 @@
 .questionContainer {
-    margin: 50px auto 150px;
-    ;
+    margin: 50px auto;
+    padding-bottom: 100px;
     width: 70vw;
     max-width: 800px;
 }
