--- a/frontend/src/components/button/button.m.css
+++ b/frontend/src/components/button/button.m.css
@@ -1,4 +1,3 @@
-
 .button {
     color: white;
     padding: 5px 20px;
@@ -14,4 +13,8 @@
 
 .button:hover {
     background-color: gray;
+}
+
+.backButton {
+    cursor: pointer;
 }
