--- a/frontend/src/pages/home/home.m.css
+++ b/frontend/src/pages/home/home.m.css
@@ -10,3 +10,10 @@
     background: linear-gradient(90deg, rgba(226, 238, 255, 1) 0%, rgba(147, 194, 255, 1) 100%);
     height: 100%;
 }
+
+.searchContainer {
+    text-align: center;
+    margin: 40px auto 0;
+    width: 70vw;
+    max-width: 800px;
+}
