--- a/frontend/src/components/header/header.m.css
+++ b/frontend/src/components/header/header.m.css
@@ -1,7 +1,8 @@
 .headerContainer {
     display: flex;
     flex-direction: row;
-    height: 50px;
+    min-height: 40px;
+    max-height: 40px;
     padding: 20px 72px;
     font-size: 18px;
     align-items: center;
