--- a/frontend/src/components/search/search.m.css
+++ b/frontend/src/components/search/search.m.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 40px;
     border-radius: 30px;
-    border: 2px black solid;
+    box-shadow: 0px 0px 3px black;
     background: white;
 }
 
