--- a/frontend/src/pages/home/home.m.css
+++ b/frontend/src/pages/home/home.m.css
@@ -1,4 +1,5 @@
 .title {
+    margin-top: 240px;
     font-size: 40px;
     font-family: "Inter", sans-serif;
     font-weight: 900;
@@ -6,7 +7,6 @@
 }
 
 .home {
-    padding-top: 200px;
     background: linear-gradient(90deg, rgba(226, 238, 255, 1) 0%, rgba(147, 194, 255, 1) 100%);
     height: 100%;
 }
