--- a/frontend/src/pages/login/login.m.css
+++ b/frontend/src/pages/login/login.m.css
@@ -38,7 +38,7 @@
 }
 
 .loginGroup {
-    width: 400;
+    width: 400px;
     margin: 10px auto;
 }
 
@@ -75,4 +75,21 @@
     margin-top: 20px;
     width: 100%;
     height: 40px;
+}
+
+@media screen and (max-width: 1200px) {
+    .infoPane {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .loginPane {
+        margin: 200px auto;
+    }
+
+    .loginGroup {
+        width: 300px;
+    }
 }
