--- a/frontend/src/pages/home/home.m.css
+++ b/frontend/src/pages/home/home.m.css
@@ -1,19 +1,19 @@
-.title {
-    margin-top: 240px;
-    font-size: 40px;
-    font-family: "Inter", sans-serif;
-    font-weight: 900;
-    text-align: center;
-}
-
 .home {
-    background: linear-gradient(90deg, rgba(226, 238, 255, 1) 0%, rgba(147, 194, 255, 1) 100%);
     height: 100%;
 }
 
-.searchContainer {
+.title {
+    margin-top: 10px;
+    font-size: 32px;
     text-align: center;
-    margin: 40px auto 0;
-    width: 70vw;
-    max-width: 800px;
+}
+
+.date {
+    font-size: 20px;
+    text-align: center;
+}
+
+.pageTitle {
+    margin: 20px 20px 36px;
+    font-size: 20px;
 }
