--- a/frontend/src/pages/login/login.m.css
+++ b/frontend/src/pages/login/login.m.css
@@ -2,25 +2,26 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
-    background: #fffefc;
-}
-
-.loginImage {
-    margin: 0 auto;
-    width: 450px;
+    background: #eeeeee;
 }
 
 .title {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+}
+
+.signInText {
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .loginPane {
     margin: auto;
     width: 400px;
-    padding: 30px 30px 100px;
-    border-radius: 5px;
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+    height: 400px;
+    padding: 50px 30px;
+    border-radius: 10px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0 0 10px;
     background-color: white;
 }
 
