--- a/frontend/src/pages/home/home.m.css
+++ b/frontend/src/pages/home/home.m.css
@@ -17,3 +17,31 @@
     margin: 20px 20px 36px;
     font-size: 20px;
 }
+
+.tasksContainer {
+    border-radius: 10px;
+    border: 1px solid var(--border-color);
+    height: 400px;
+    margin: 60px 90px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 0 8px;
+}
+
+.tasksHeaderContainer {
+    border-radius: 5px 5px 0 0;
+    border-bottom: 1px solid var(--border-color);
+    height: 100px;
+    padding-top: 30px;
+    padding-left: 24px;
+    box-sizing: border-box;
+}
+
+.tasksTitle {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 18px;
+}
+
+.tasksSubtitle {
+    display: inline;
+    margin-right: 20px;
+}
