--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -28,6 +28,10 @@
 .bodyContainer {
     height: 300px;
     margin-bottom: 20px;
+    background: white;
+    border: 2px gray solid;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .noResize {
