--- a/frontend/src/pages/question/question.m.css
+++ b/frontend/src/pages/question/question.m.css
@@ -29,6 +29,10 @@
 
 .answerInput {
     height: 100px;
+    background: white;
+    border: 2px gray solid;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .answerButton {
