--- a/frontend/src/pages/search/search.m.css
+++ b/frontend/src/pages/search/search.m.css
@@ -9,6 +9,10 @@
     margin-bottom: 40px;
 }
 
+.postTitleContainer {
+    margin-bottom: 10px;
+}
+
 .postTitle {
     text-align: left;
     display: block;
