--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -23,6 +23,7 @@
 
 .titleContainer:focus {
     outline: none;
+    border: 2px blue solid;
 }
 
 .bodyContainer {
@@ -31,7 +32,12 @@
     background: white;
     border: 2px gray solid;
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px !important;
+    box-shadow: none !important;
+}
+
+.bodyContainer:focus {
+    border: 2px blue solid;
 }
 
 .noResize {
