--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -43,3 +43,16 @@
 .noResize {
     resize: none;
 }
+
+.assigneeContainer {
+    height: 40px;
+    background: white;
+    border: 2px gray solid;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.assigneeContainer:focus-within {
+    border: 2px solid rgb(130, 178, 255) !important;
+}
