--- a/frontend/src/pages/home/home.m.css
+++ b/frontend/src/pages/home/home.m.css
@@ -45,3 +45,21 @@
     display: inline;
     margin-right: 20px;
 }
+
+.tasksContentContainer {
+    width: 100%;
+}
+
+.loading {
+    position: inherit;
+    margin: auto;
+    margin-top: 120px;
+}
+
+.questionLink {
+    color: blue;
+}
+
+.questionLink:visited {
+    color: blue;
+}
