--- a/frontend/src/components/navigationBar/navigationBar.m.css
+++ b/frontend/src/components/navigationBar/navigationBar.m.css
@@ -57,20 +57,22 @@
 }
 
 .newQuestion {
-    margin: 30px auto 30px;
+    margin: 30px auto 20px 20px;
     height: 40px;
     display: flex;
     flex-direction: row;
     border-radius: 50px;
-    background: #D9D9D9;
-    color: black;
+    background: #449e6e;
+    color: white;
     text-decoration: none;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 24px 0 14px;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .newQuestion:hover {
-    background: rgb(179, 179, 179);
+    background: #378159;
 }
 
 .newQuestionText {
