--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -5,9 +5,9 @@
 }
 
 .submitQuestionButton {
-    margin-top: 20px;
+    margin-top: 25px;
     padding: 10px;
-    width: 100%;
+    width: 200px;
 }
 
 .titleContainer {
