Add My Tasks page and use Inbox as home

--- a/frontend/src/components/searchbar/searchbar.m.css
+++ b/frontend/src/components/searchbar/searchbar.m.css
@@ -11,7 +11,7 @@
 }
 
 .searchBar:focus-within {
-    border: 2px solid rgb(130, 178, 255);
+    border: 2px solid #44749e;
 }
 
 .searchIconContainer {
