--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -23,7 +23,7 @@
 
 .titleContainer:focus {
     outline: none;
-    border: 2px solid rgb(130, 178, 255);
+    border: 2px solid #44749e;
 }
 
 .bodyContainer {
@@ -37,7 +37,7 @@
 }
 
 .bodyContainer:focus {
-    border: 2px solid rgb(130, 178, 255);
+    border: 2px solid #44749e;
 }
 
 .noResize {
@@ -54,5 +54,5 @@
 }
 
 .assigneeContainer:focus-within {
-    border: 2px solid rgb(130, 178, 255) !important;
+    border: 2px solid #44749e !important;
 }
