--- a/frontend/src/components/loading/loading.m.css
+++ b/frontend/src/components/loading/loading.m.css
@@ -1,6 +1,8 @@
+@import "/src/styles/colors.css";
+
 .loading {
-    border: 4px solid #f1f1f1;
-    border-top: 4px solid #4d4d4d;
+    border: 4px solid lightgray;
+    border-top: 4px solid gray;
     border-radius: 50%;
     width: 24px;
     height: 24px;
