--- a/frontend/src/components/navigationBar/navigationBar.m.css
+++ b/frontend/src/components/navigationBar/navigationBar.m.css
@@ -1,4 +1,4 @@
-@import "src/styles/colors";
+@import "/src/styles/colors.css";
 
 .navigationBar {
     min-width: 250px;
@@ -21,7 +21,7 @@
 }
 
 .organizationContainer:hover {
-    background: #f1f1f1;
+    background: var(--navigation-highlight-color);
 }
 
 .organizationIcon {
@@ -30,7 +30,7 @@
     text-align: center;
     line-height: 30px;
     border-radius: 10px;
-    background: gray;
+    background: #3e3e3e;
     color: white;
     font-size: 16px;
     display: inline-block;
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: row;
     border-radius: 50px;
-    background: #449e6e;
+    background: var(--primary-color);
     color: white;
     text-decoration: none;
     align-items: center;
@@ -72,7 +72,7 @@
 }
 
 .newQuestion:hover {
-    background: #378159;
+    background: var(--primary-highlight-color);
 }
 
 .newQuestionText {
@@ -81,7 +81,7 @@
 }
 
 .activeRouteContainer {
-    background: #f1f1f1;
+    background: var(--navigation-highlight-color);
     padding: 10px 28px;
     display: flex;
     flex-direction: row;
@@ -106,7 +106,7 @@
 }
 
 .routeContainer:hover {
-    background: #f1f1f1;
+    background: var(--navigation-highlight-color);
 }
 
 .route {
