--- a/frontend/src/styles/colors.css
+++ b/frontend/src/styles/colors.css
@@ -1,3 +1,6 @@
 :root {
     --border-color: #E4E4E4;
+    --navigation-highlight-color: #f1f1f1;
+    --primary-color: #449e6e;
+    --primary-highlight-color: #378159;
 }
