--- a/frontend/src/styles/colors.css
+++ b/frontend/src/styles/colors.css
@@ -3,4 +3,5 @@
     --navigation-highlight-color: #f1f1f1;
     --primary-color: #449e6e;
     --primary-highlight-color: #378159;
+    --primary-text-color: #323232;
 }
