--- a/frontend/src/pages/mytasks/mytasks.m.css
+++ b/frontend/src/pages/mytasks/mytasks.m.css
@@ -4,30 +4,20 @@
     height: 100%;
 }
 
-.title {
-    margin-top: 10px;
-    font-size: 32px;
-    text-align: center;
-}
-
-.date {
-    font-size: 20px;
-    text-align: center;
-}
-
 .pageTitle {
-    margin: 20px 20px 36px;
-    font-size: 20px;
+    margin: 30px 30px 36px;
+    font-size: 16px;
 }
 
 .tasksFilterContainer {
-    margin: 20px;
+    margin: 30px 30px 20px;
 }
 
 .tasksFilter {
     display: inline;
     margin-right: 20px;
     cursor: pointer;
+    font-size: 14px;
 }
 
 .tasksContentContainer {
@@ -49,10 +39,12 @@
 
 .questionListItem {
     width: 100%;
+    box-sizing: border-box;
     border-bottom: 1px solid var(--border-color);
-    padding: 15px 20px;
+    padding: 15px 30px;
     cursor: pointer;
     display: flex;
+    font-size: 14px;
 }
 
 .questionListItem:hover {
@@ -61,4 +53,5 @@
 
 .questionTitle {
     display: inline;
+    margin-top: 2px;
 }
