--- a/frontend/src/pages/inbox/inbox.m.css
+++ b/frontend/src/pages/inbox/inbox.m.css
@@ -9,13 +9,9 @@
 }
 
 .date {
+    margin-top: 50px;
     font-size: 20px;
     text-align: center;
-}
-
-.pageTitle {
-    margin: 30px 30px 36px;
-    font-size: 16px;
 }
 
 .loading {
