--- a/frontend/src/components/modal/modal.m.css
+++ b/frontend/src/components/modal/modal.m.css
@@ -3,39 +3,42 @@
     z-index: 99;
     top: 0;
     left: 0;
-    width:100%;
+    width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
 }
-  
+
 .modalMain {
-    position:fixed;
+    position: fixed;
     background: white;
     display: flex;
     flex-direction: column;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 10px;
 }
 
 .displayBlock {
     display: block;
 }
-  
+
 .displayNone {
     display: none;
 }
 
-.center {
-    text-align: center;
+.title {
+    font-size: 16px;
+    display: inline;
+    margin: 20px;
 }
 
 .closeButton {
-    margin: 5px 0 30px;
+    display: inline;
+    margin: 20px;
+    margin-left: auto;
     background-color: transparent;
     border: none;
-    border-radius: 20px;
-    font-size: medium;
     cursor: pointer;
+    padding: 0;
 }
