--- a/frontend/src/components/navigationBar/navigationBar.m.css
+++ b/frontend/src/components/navigationBar/navigationBar.m.css
@@ -1,8 +1,8 @@
 @import "/src/styles/colors.css";
 
 .navigationBar {
-    min-width: 240px;
-    width: 240px;
+    min-width: 220px;
+    width: 220px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -58,8 +58,8 @@
 }
 
 .newQuestion {
-    margin: 20px auto 20px 20px;
-    height: 40px;
+    margin: 20px;
+    height: 32px;
     display: flex;
     flex-direction: row;
     border-radius: 5px;
@@ -67,7 +67,7 @@
     color: white;
     text-decoration: none;
     align-items: center;
-    padding: 0 24px 0 14px;
+    padding-left: 10px;
     font-size: 14px;
     font-weight: 600;
     box-shadow: rgb(0 0 0 / 7%) 0px 1px 1px;
@@ -84,27 +84,33 @@
 
 .activeRouteContainer {
     background: #d6d6d6;
-    padding: 10px 28px;
+    padding-left: 15px;
     display: flex;
     flex-direction: row;
-    height: 40px;
+    height: 30px;
     box-sizing: border-box;
     cursor: pointer;
     align-items: center;
     color: var(--primary-text-color);
     text-decoration: none;
+    margin: 0 20px;
+    border-radius: 5px;
+    margin-bottom: 5px;
 }
 
 .routeContainer {
-    padding: 10px 28px;
+    padding-left: 15px;
     display: flex;
     flex-direction: row;
-    height: 40px;
+    height: 30px;
     box-sizing: border-box;
     cursor: pointer;
     align-items: center;
     color: var(--primary-text-color);
     text-decoration: none;
+    margin: 0 20px;
+    border-radius: 5px;
+    margin-bottom: 5px;
 }
 
 .routeContainer:hover {
