--- a/frontend/src/components/navigationBar/navigationBar.m.css
+++ b/frontend/src/components/navigationBar/navigationBar.m.css
@@ -71,6 +71,7 @@
     font-size: 14px;
     font-weight: 600;
     box-shadow: rgb(0 0 0 / 7%) 0px 1px 1px;
+    border: 1px solid #508368;
     cursor: pointer;
 }
 
