--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -1,8 +1,7 @@
 .questionContainer {
-    margin: 50px;
-    margin-top: 10px;
-    width: 700px;
-    max-width: 800px;
+    margin: 20px;
+    margin-top: 0;
+    width: 640px;
 }
 
 
@@ -12,45 +11,38 @@
     }
 }
 
-.submitQuestionButton {
-    margin-top: 25px;
-    padding: 10px;
-    width: 200px;
-}
-
 .titleContainer {
     height: 40px;
     background: white;
-    border: 2px gray solid;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 20px;
+    border: none;
+    margin-bottom: 10px;
     width: 100%;
     box-sizing: border-box;
+    font-size: 18px;
+    padding: 0;
 }
 
 .titleContainer::placeholder {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .titleContainer:focus {
     outline: none;
-    border: 2px solid #44749e;
+    border: none;
 }
 
 .bodyContainer {
     min-height: 100px;
-    max-height: 400px;
+    max-height: 300px;
     margin-bottom: 20px;
     background: white;
-    border: 2px gray solid;
-    border-radius: 5px;
-    padding: 10px !important;
+    border: none;
+    padding: 0 !important;
     box-shadow: none !important;
 }
 
 .bodyContainer:focus {
-    border: 2px solid #44749e;
+    border: none;
 }
 
 .noResize {
@@ -58,18 +50,29 @@
 }
 
 .assigneeContainer {
-    height: 40px;
-    background: white;
-    border: 2px gray solid;
+    height: 30px;
+    background: var(--border-color);
+    border: 2px solid var(--border-color);
     border-radius: 5px;
-    width: 100%;
     box-sizing: border-box;
+    width: 160px;
+    display: flex;
 }
 
-.assigneeContainer:focus-within {
-    border: 2px solid #44749e !important;
+.assigneeContainer:hover {
+    background: #b6b6b6;
+    border-color: #b6b6b6;
 }
 
-.assigneeContainer::placeholder {
-    font-style: italic;
+.submitContainer {
+    display: flex;
+    width: 100%;
+    border-top: 1px solid var(--border-color);
+}
+
+.submitQuestionButton {
+    margin: 15px;
+    margin-left: auto;
+    padding: 5px 20px;
+    font-size: 14px;
 }
