--- a/frontend/src/pages/question/question.m.css
+++ b/frontend/src/pages/question/question.m.css
@@ -30,14 +30,14 @@
 .answerInput {
     height: 100px;
     background: white;
-    border: 2px gray solid;
-    border-radius: 5px;
+    box-shadow: rgb(0 0 0 / 3%) 0px 2px 5px !important;
+    border-radius: 10px;
+    border: 1px solid rgb(243, 242, 242) !important;
     padding: 10px !important;
-    box-shadow: none !important;
 }
 
 .answerInput:focus {
-    border: 2px solid #44749e;
+    box-shadow: rgb(0 0 0 / 9%) 0px 3px 12px !important;
 }
 
 .answerButton {
