--- a/frontend/src/components/navigationBar/navigationBar.m.css
+++ b/frontend/src/components/navigationBar/navigationBar.m.css
@@ -26,15 +26,16 @@
 }
 
 .organizationIcon {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
     text-align: center;
-    line-height: 30px;
-    border-radius: 10px;
+    line-height: 20px;
+    border-radius: 5px;
     background: #3e3e3e;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     display: inline-block;
+    margin-top: 5px;
 }
 
 .organizationName {
