--- a/frontend/src/pages/mytasks/mytasks.m.css
+++ b/frontend/src/pages/mytasks/mytasks.m.css
@@ -13,6 +13,7 @@
     margin-right: 20px;
     cursor: pointer;
     font-size: 14px;
+    user-select: none;
 }
 
 .tasksContentContainer {
@@ -40,6 +41,7 @@
     cursor: pointer;
     display: flex;
     font-size: 14px;
+    user-select: none;
 }
 
 .questionListItem:hover {
