Use headless UI instead of material

--- a/frontend/src/components/button/button.m.css
+++ b/frontend/src/components/button/button.m.css
@@ -26,6 +26,9 @@
 }
 
 .backButton {
+    display: inline;
     cursor: pointer;
     user-select: none;
+    font-size: 14px;
+    font-weight: 500;
 }
