--- a/frontend/src/pages/question/question.m.css
+++ b/frontend/src/pages/question/question.m.css
@@ -16,9 +16,8 @@
 }
 
 .answer {
-    min-height: 80px;
-    margin: 40px 0 10px;
-    padding-bottom: 10px;
+    margin: 30px 0 10px;
+    padding-bottom: 20px;
     border-bottom: 1px solid lightgray;
 }
 
@@ -42,5 +41,5 @@
 
 .answerButton {
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 5px 10px;;
 }
