--- a/frontend/src/pages/newquestion/newquestion.m.css
+++ b/frontend/src/pages/newquestion/newquestion.m.css
@@ -58,6 +58,7 @@
 .submitQuestionButton {
     margin: 15px;
     margin-left: auto;
-    padding: 5px 20px;
+    padding: 5px;
     font-size: 14px;
+    width: 100px;
 }
