--- a/frontend/src/pages/mytasks/mytasks.m.css
+++ b/frontend/src/pages/mytasks/mytasks.m.css
@@ -2,6 +2,7 @@
 
 .home {
     height: 100%;
+    overflow: scroll;
 }
 
 .tasksFilterContainer {
@@ -31,6 +32,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    padding-bottom: 100px;
 }
 
 .questionListItem {
