--- a/frontend/src/components/navigationBar/navigationBar.m.css
+++ b/frontend/src/components/navigationBar/navigationBar.m.css
@@ -57,10 +57,10 @@
 }
 
 .newQuestion {
-    margin: 20px;
     height: 32px;
     display: flex;
     flex-direction: row;
+    width: 100%;
     border-radius: 5px;
     background: var(--primary-color);
     color: white;
@@ -76,12 +76,6 @@
 
 .newQuestion:hover {
     background: var(--primary-highlight-color);
-}
-
-.newQuestionText {
-    margin-left: 5px;
-    display: inline-block;
-    font-weight: 500;
 }
 
 .activeRouteContainer {
