--- a/frontend/src/components/searchbar/searchbar.m.css
+++ b/frontend/src/components/searchbar/searchbar.m.css
@@ -1,11 +1,9 @@
-@import "/src/styles/colors.css";
-
 .searchBar {
     display: flex;
     width: 100%;
     height: 30px;
     border-radius: 30px;
-    border: 1px solid var(--border-color);
+    border: 1px solid #323232;
     background: white;
     font-size: 14px;
 }
