--- a/frontend/src/pages/search/search.m.css
+++ b/frontend/src/pages/search/search.m.css
@@ -1,5 +1,3 @@
-@import "/src/styles/colors.css";
-
 .resultsContainer {
     text-align: center;
     margin: 40px auto 0;
@@ -18,21 +16,12 @@
     font-weight: 500;
 }
 
-.postTitle {
-    text-align: left;
-    display: block;
-}
-
-.postTitle:hover {
-    color: var(--primary-highlight-color);
-}
-
 .postBody {
     text-align: left;
 }
 
 .result {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #323232;
     padding-bottom: 20px;
     height: 80px;
 }
