--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import "tippy.js/dist/tippy.css";
+@import "../.mirrorful/theme.css";
 
 @tailwind base;
 @tailwind components;
@@ -6,8 +7,8 @@
 
 :root {
 	/* These are the default Fabra colors */
-	--color-primary: #475569;
-	--color-primary-hover: #1e293b;
+	--color-primary: var(--color-fabra-primary);
+	--color-primary-hover: var(--color-fabra-primary-hover);
 	--color-primary-text: #ffffff;
 }
 
