--- a/frontend/src/connect/index.css
+++ b/frontend/src/connect/index.css
@@ -1,5 +1,5 @@
 @import "tippy.js/dist/tippy.css";
-@import "../.mirrorful/theme.css";
+@import "/.mirrorful/theme.css";
 
 @tailwind base;
 @tailwind components;
@@ -25,7 +25,6 @@ body {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: white;
   color: #0d1117;
   overscroll-behavior: none;
 }
