Update hosting landing page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,7 @@
 }
 
 :root {
-  /* These are the default Fabra colors */
+  /* These are the default Coaster colors */
   --color-primary: #a6701d;
   --color-primary-hover: #824f00;
   --color-primary-text: #ffffff;
